# sig-importer

./: .gitignore  CMakeLists.txt  README.md
src/: dllmain.cpp  dllmain.h
src/import/: import.cpp  import.h
src/search/: search.cpp  search.h
src/shared/: import.h  shared.cpp  shared.h  types.h
